--- a/web/like.html
+++ b/web/like.html
@@ -16,7 +16,7 @@
         }
 
         .card1 {
-            background-image: url(/image/封面1.jpg);
+            background-image: url('image/封面1.jpg');
             background-repeat: no-repeat;
             position:absolute;
             background-size: 350px 400px;
@@ -28,7 +28,7 @@
             transition: 0.5s;
         }
         .card2 {
-            background-image: url(/image/封面2.jpg);
+            background-image: url('image/封面2.jpg');
             background-repeat: no-repeat;
             background-size: 350px 385px;
             position:absolute;
@@ -41,7 +41,7 @@
             transition: 0.5s;
         }
         .card3 {
-            background-image: url(/image/封面3.jpg);
+            background-image: url('image/封面3.jpg');
             background-repeat: no-repeat;
             background-size: 350px 400px;
             position:absolute;
