--- a/web/like.html
+++ b/web/like.html
@@ -11,7 +11,7 @@
             justify-content: center;
             align-items: center;
             min-height: 100vh;
-            background: url('image/光1.jpg') no-repeat center center fixed;
+            background: url('../image/光1.jpg') no-repeat center center fixed;
             background-size: cover;
         }
 
